# zuul-operator

./: .git-blame-ignore-revs  .gitignore  .zuul.yaml  CONTRIBUTE.md  Makefile  README.md  install.sh  nodepool.yaml  noxfile.py  requirements.txt  setup.cfg  setup.py  tenant.yaml  tox.ini  uninstall.sh  watches.yaml  zuul.yaml
conf/: CertManager.dhall  Kubernetes.dhall  Prelude.dhall
conf/zuul/: functions.dhall  input.dhall  resources.dhall
conf/zuul/components/: Database.dhall  Executor.dhall  Merger.dhall  Preview.dhall  Registry.dhall  Scheduler.dhall  Web.dhall  ZooKeeper.dhall
conf/zuul/files/: nodepool.yaml.dhall  registry.yaml.dhall  zoo.cfg.dhall  zuul.conf.dhall
custom-deployment-files/: nodepool.yaml
database/: mysql.yaml
deploy/: operator.yaml  rbac.yaml
deploy/crds/: zuul-ci_v1alpha1_zuul_cr.yaml  zuul-ci_v1alpha2_zuul_cr.yaml  zuul-ci_v1alpha2_zuul_crd.yaml
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/_templates/: versions.html
playbooks/files/: ansible.cfg  cr_spec.yaml  local-vars.yaml  local.yaml  update-operator.sh
playbooks/zuul-operator-functional/: post.yaml  pre-k8s.yaml  run.yaml  test.yaml
playbooks/zuul-operator-functional-k8s/: run.yaml
stackhpc/: README.md  install.sh  patch.sh
stackhpc/database/: mariadb-secret.yaml  mysql.yaml
stackhpc/deploy-zuul/: main.yaml  nodepool.yaml  zuul-permissions-role.yaml  zuul.yaml
stackhpc/patch-files/: executor-key-patchfile.yaml  scheduler-key-patchfile.yaml  web-key-patchfile.yaml  web-service-patchfile.yaml  zookeeper-image-patchfile.yaml
tools/: README.rst  kind.yaml  restart.sh  vars.yaml
zuul_operator/: __init__.py  certmanager.py  cmd.py  objects.py  operator.py  pxc.py  utils.py  version.py  zookeeper.py  zuul.py
zuul_operator/templates/: cert-authority.yaml  cert-manager.yaml  nodepool-launcher.yaml  pxc-bundle.yaml  pxc-cluster.yaml  pxc-create-db.yaml  pxc-operator.yaml  zookeeper.yaml  zuul-launcher.yaml  zuul-registry.yaml  zuul.conf  zuul.yaml
(+22 files in other folders)
