[metadata]
name = zuul-operator
summary = A Kubernetes operator for Zuul
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Zuul Team
author-email = zuul-discuss@lists.zuul-ci.org
url = https://zuul-ci.org/
project_urls =
    Browse Source = https://opendev.org/zuul/zuul-operator
    Bug Reporting = https://storyboard.openstack.org/#!/project/zuul/zuul-operator
    Documentation = https://zuul-ci.org/docs/zuul-operator
    Git Clone URL = https://opendev.org/zuul/zuul-operator
    License Texts = https://opendev.org/zuul/zuul-operator/src/branch/master/LICENSE
    Release Notes = https://zuul-ci.org/docs/zuul-operator/releasenotes.html
keywords = gating continuous integration delivery deployment commandline
license = Apache License, Version 2.0
license_files =
    AUTHORS
    LICENSE
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
python-requires = >=3.6

[files]
packages = zuul_operator
package-data =
  zuul_operator = templates/*

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    zuul-operator = zuul_operator.cmd:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1
